deploy/application/istio/destinationrules.yaml
# apiVersion: networking.istio.io/v1alpha3
# kind: DestinationRule
# metadata:
#   name: frontend
# spec:
#   host: frontend
#   trafficPolicy:
#     tls:
#       mode: ISTIO_MUTUAL
#   subsets:
#     - name: prod
#       labels:
#         version: prod
# ---
# apiVersion: networking.istio.io/v1alpha3
# kind: DestinationRule
# metadata:
#   name: api_gateway
# spec:
#   host: api_gateway
#   trafficPolicy:
#     tls:
#       mode: ISTIO_MUTUAL
#   subsets:
#     - name: prod
#       labels:
#         version: prod
#     - name: canary
#       labels:
#         version: canary
# ---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: user-management
spec:
  host: user-management
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  subsets:
    - name: prod
      labels:
        version: prod
    # - name: canary
    #   labels:
    #     version: canary
# ---
# apiVersion: networking.istio.io/v1alpha3
# kind: DestinationRule
# metadata:
#   name: transaction_management
# spec:
#   host: transaction_management
#   trafficPolicy:
#     tls:
#       mode: ISTIO_MUTUAL
#   subsets:
#     - name: prod
#       labels:
#         version: prod
#     - name: canary
#       labels:
#         version: canary
# ---
# apiVersion: networking.istio.io/v1alpha3
# kind: DestinationRule
# metadata:
#   name: transaction_management
# spec:
#   host: transaction_management
#   trafficPolicy:
#     tls:
#       mode: ISTIO_MUTUAL
#   subsets:
#     - name: prod
#       labels:
#         version: prod
#     - name: canary
#       labels:
#         version: canary
# ---
# apiVersion: networking.istio.io/v1alpha3
# kind: DestinationRule
# metadata:
#   name: transaction_management
# spec:
#   host: transaction_management
#   trafficPolicy:
#     tls:
#       mode: ISTIO_MUTUAL
#   subsets:
#     - name: prod
#       labels:
#         version: prod
#     - name: canary
#       labels:
#         version: canary
# ---
# apiVersion: networking.istio.io/v1alpha3
# kind: DestinationRule
# metadata:
#   name: transaction_management
# spec:
#   host: transaction_management
#   trafficPolicy:
#     tls:
#       mode: ISTIO_MUTUAL
#   subsets:
#     - name: prod
#       labels:
#         version: prod
#     - name: canary
#       labels:
#         version: canary
# ---
# apiVersion: networking.istio.io/v1alpha3
# kind: DestinationRule
# metadata:
#   name: transaction_management
# spec:
#   host: transaction_management
#   trafficPolicy:
#     tls:
#       mode: ISTIO_MUTUAL
#   subsets:
#     - name: prod
#       labels:
#         version: prod
#     - name: canary
#       labels:
#         version: canary
# ---
# apiVersion: networking.istio.io/v1alpha3
# kind: DestinationRule
# metadata:
#   name: transaction_management
# spec:
#   host: transaction_management
#   trafficPolicy:
#     tls:
#       mode: ISTIO_MUTUAL
#   subsets:
#     - name: prod
#       labels:
#         version: prod
#     - name: canary
#       labels:
#         version: canary
# ---
