deploy/application/istio/routing.yaml
# apiVersion: networking.istio.io/v1alpha3
# kind: VirtualService
# metadata:
#   name: frontend
# spec:
#   hosts:
#     - "*"
#   gateways:
#     - lilo-gateway
#   http:
#     - route:
#       - destination:
#         host: frontend
#         subset: prod
#       retries:
#         attempts: 3
#         perTryTimeout: 1s
#         retryOn: "5xx"
# ---
# apiVersion: networking.istio.io/v1alpha3
# kind: VirtualService
# metadata:
#   name: api_gateway
# spec:
#   hosts:
#     - api_gateway
#   gateways:
#     - lilo-gateway
#   http:
#     - route:
#       - destination:
#         host: api_gateway
#         subset: prod
#       retries:
#         attempts: 3
#         perTryTimeout: 1s
#         retryOn: "5xx"
# ---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: user-management
spec:
  hosts:
    - "*"
    - "user-management"
  gateways:
    - lilo-gateway
  http:
    - route:
      - destination:
          host: user-management
          subset: prod
      retries:
        attempts: 3
        perTryTimeout: 1s
        retryOn: "5xx"
